<resources>
    <string name="app_name">Sticky notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">hasło</string>
    <string name="login">Zaloguj</string>
    <string name="register">Rejestracja</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Niepoprawna nazwa użytkownika</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Logowanie nie powiodło się"</string>
    <string name="passw_conf">potwierdź hasło</string>
    <string name="forget_password">Zapomniałeś hasła?</string>
    <string name="dont_have_acc">Nie masz konta?</string>
    <string name="have_acc">Masz już konto?</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
